--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,11 @@ body {
 	font-family: 'Lato', sans-serif;
 }
 
+canvas {
+	border: 1px solid #E3E3E3;
+	margin-bottom: 20px;
+}
+
 /*===========
    Site Main
  ==========*/
@@ -122,7 +127,7 @@ body {
    Nav Menu
  =============*/
 .menu > div {
-	font-size: 16px;
+	font-size: 14px;
 	font-weight: 600;
 	margin: 18px 0px 0px 23px;
 }
@@ -279,7 +284,53 @@ body {
 }
 
 .stats > h2 {
+  margin-top: 10px;
+  text-align: center;
+	margin-bottom: 25px;
+}
+
+.stats > h4 {
+  margin-top: 10px;
+  text-align: center;
 	margin-bottom: 15px;
+}
+
+.stats > .container > .row {
+	text-align: center;
+}
+
+.stats > .container > .row > div > .title > h5 {
+	color: #1F74CC;
+}
+
+.stats > .container > .row > .col-3 > .weight {
+	font-size: 14px;
+}
+
+.stats > .container > .row > .col-3 > .date {
+	font-size: 14px;
+}
+
+.stats > .container > .row > .col-6 > .weight {
+	font-size: 48px;
+	font-weight: bold;
+}
+
+.stats > .container > .row > .col-6 > .weight > span{
+	font-size: 14px;
+}
+
+.stats > .container > .row > div > .date {
+	margin-top: 10px;
+}
+
+.stats > .container > .row > .col-6 > .progress {
+	height: 8px;
+	margin-top: 18px;
+}
+
+.stats > .container > .row > .col-6 > .progress > .progress-bar {
+	width: 0%;
 }
 
 /*======================
